# PADAMO

./: .gitignore  build_appimage.sh  build_linux.sh  build_wine.sh  icon.xcf  start.sh
padamo-package/: main.py  pyproject.toml  requirements.txt
padamo-package/padamo/: __init__.py  appdata.py  application.py  build.py  build_win.bat
padamo-package/padamo/bookmarking/: __init__.py  bookmark.py  lazy_file_bookmarks.py
padamo-package/padamo/canvas_drawing/: __init__.py  canvas_drawable.py  connections.py  custom_canvas.py  draggable_rect.py  linkable_nodes.py  port_types.py
padamo-package/padamo/editing/: __init__.py  editor_frame.py  editors.py  filenames.py  slice_editor.py  widgets.py
padamo-package/padamo/lazy_array_operations/: __init__.py  base.py  basic_operations.py  slice_combination.py
padamo-package/padamo/node_lib/: __init__.py  addons_workspace.py  base.py  disabled_node_arrays.py  disabled_node_caching.py  disabled_node_conversion.py  disabled_node_plots.py  disabled_node_triggering.py  index.py  node_arithmetics.py  node_constants.py  node_ff.py  node_filename.py  node_hdf5.py  node_io.py  node_mat.py  node_math.py  node_physical_ff.py  node_quicklook.py  node_remote_hdf5.py  node_resolution_change.py  node_root_io.py  node_signal_manipulation.py  node_signal_processing.py  node_simple_triggers.py  node_spectra.py  node_strings.py  node_viewer.py
padamo-package/padamo/node_processing/: __init__.py  node_canvas.py  node_proxy.py
padamo-package/padamo/tests/: old_d3_test.json  test_100hz.json  test_dt.json  test_filtering.json  test_remote.json  (+1 more)
(+62 files in other folders)
