[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "padamo"
version = "0.0.2"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
padamo-run="padamo:run"

#[tool.setuptools]
#packages = []

